adding endorsed lib in openejb-core (setting a property in openejb parent pom useable everywhere)
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@1162805 13f79535-47bb-0310-9956-ffa450edef68